--- a/ArmaTuFecha/src/main/resources/templates/editar-perfil-musico.html
+++ b/ArmaTuFecha/src/main/resources/templates/editar-perfil-musico.html
@@ -32,7 +32,7 @@
 			</div>
 
 			<div class="row">
-				<div class="col-12">
+				<div class="col-lg-8 mx-auto">
 					<form class="form-group needs-validation" 
 						th:action="'/musicos/mi-perfil/procesar-edicion/' + ${id_usuario}"
 						method="POST">
