--- a/ArmaTuFecha/src/main/resources/templates/listado-musicos.html
+++ b/ArmaTuFecha/src/main/resources/templates/listado-musicos.html
@@ -85,6 +85,7 @@
 						</div>
 						<div class="col-md-3">
 							<form class="form-group" action="/musicos/busqueda-genero/procesar/1">
+								<label class="d-block d-sm-none">Buscá por género musical..</label>
 								<select multiple
 								class="form-control" id="exampleFormControlSelect4"
 								name="busquedaGenero">
