--- a/ArmaTuFecha/src/main/resources/static/css/estilos.css
+++ b/ArmaTuFecha/src/main/resources/static/css/estilos.css
@@ -41,6 +41,7 @@
 	padding-bottom: 80px !important;
 }
 
+
 .bootstrap-override-header2 {
 	padding-top: 100px;
 	padding-bottom: 100px;
@@ -52,7 +53,10 @@
 	padding-bottom: 600px;
 }
 
-
+.bootstrap-override-header4 {
+	padding-bottom: 80px !important;
+	padding-top: 120px;
+}
 .bootstrap-override-section {
 	padding-top: 100px !important;
 }
