--- a/ArmaTuFecha/src/main/resources/templates/pagina-principal-logueado.html
+++ b/ArmaTuFecha/src/main/resources/templates/pagina-principal-logueado.html
@@ -117,7 +117,7 @@
 	<!-- Footer -->
 	<footer class="py-5 bg-dark">
 		<div class="container">
-			<p class="m-0 text-center text-white">Copyright &copy; Your
+			<p class="m-0 text-center text-white d-none">Copyright &copy; Your
 				Website 2018</p>
 		</div>
 		<!-- /.container -->
