--- a/ArmaTuFecha/src/main/resources/templates/pagina-principal.html
+++ b/ArmaTuFecha/src/main/resources/templates/pagina-principal.html
@@ -1,10 +1,28 @@
 <!DOCTYPE html>
-<html lang="es" layout:decorate="~{estructura-nologueado}">
+<html lang="es" >
 
 <head>
 
 <meta charset="utf-8"></meta>
 <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"></meta>
+
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"crossorigin="anonymous"></link>
+
+
+<!-- Custom styles for this template -->
+<link rel="stylesheet" href="/css/scrolling-nav.css"></link>
+<link rel="stylesheet" type="text/css" href="/css/estilos.css"></link>
+
+<!-- Bootstrap core JavaScript -->
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js" integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T" crossorigin="anonymous"></script>
+
+<!-- Custom JavaScript for this theme -->
+
+<script src="/js/scrolling-nav.js"></script>
+<script src="/js/formulario.js"></script>
+<script src="/js/validacionform.js"></script>
 
 
 <title>Arma Tu Fecha</title>
@@ -13,9 +31,30 @@
 <body id="page-top">
 
 	<!-- Navigation -->
+	<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top"
+		id="mainNav">
+		<div class="container">
+			<a class="navbar-brand js-scroll-trigger" href="#page-top">Arma
+				Tu Fecha</a>
+			<button class="navbar-toggler" type="button" data-toggle="collapse"
+				data-target="#navbarResponsive" aria-controls="navbarResponsive"
+				aria-expanded="false" aria-label="Toggle navigation">
+				<span class="navbar-toggler-icon"></span>
+			</button>
+			<div class="collapse navbar-collapse" id="navbarResponsive">
+				<ul class="navbar-nav ml-auto">
+					<li class="nav-item"><a class="js-scroll-trigger btn btn-outline-dark"
+						href="/crear-perfil">Crear un Perfil</a></li>
+					<li class="nav-item"><a class="nav-link js-scroll-trigger"
+						href="/">Home</a></li>
+					<li class="nav-item"><a class="nav-link js-scroll-trigger"
+						href="/login">Log in</a></li>
+				</ul>
+			</div>
+		</div>
+	</nav>
 	
-	
-	<header class="bg-primary text-white" id="color1" layout:fragment="~{header1}">
+	<header class="bg-primary text-white" id="color1">
 		<div class="container text-center">
 			<div class="row">
 				<div class="col-12">
@@ -45,7 +84,7 @@
 		</div>
 	</header>
 
-	<section id="about" layout:fragment="~{section1}">
+	<section id="about">
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-8 mx-auto">
@@ -73,7 +112,13 @@
 	</section>
 
 	<!-- Footer -->
-	
+	<footer class="py-5 bg-dark">
+		<div class="container">
+			<p class="m-0 text-center text-white d-none">Copyright &copy; Your
+				Website 2018</p>
+		</div>
+		<!-- /.container -->
+	</footer>
 
 
 
