--- a/ArmaTuFecha/src/main/resources/templates/perfil-local-logueado.html
+++ b/ArmaTuFecha/src/main/resources/templates/perfil-local-logueado.html
@@ -109,63 +109,52 @@
 			<div class="col-md-4">
 				<div class="row">
 					<div class="col">
-						<h3 class="my-3">Datos de contacto</h3>
-						<label th:text="${provincia} + ', '">Lorem Ipsum</label>&nbsp;<label
-							th:text="${localidad}">Lorem Ipsum</label><br> <label
-							th:text="${direccion}">Lorem Ipsum</label><br> <label
-							th:text="${telefono}">a</label><br> <label
-							th:text="${mail_contacto}">a</label><br>
-
-
-					</div>
-				</div>
-				<div class="row">
-					<div class="col">
-						<h3 class="my-3">Redes sociales</h3>
-						<a th:href="${red_social1}"
-							th:if="${red_social1 != null && red_social1 != ''}"
-							th:text="${red_social1}">Facebook</a><br>
-						<br> <a th:href="${red_social2}"
-							th:if="${red_social2 != null && red_social2 != ''}"
-							th:text="${red_social2}">Instagram</a><br>
-						<br> <a th:href="${red_social3}"
-							th:if="${red_social3 != null && red_social3 != ''}"
-							th:text="${red_social3}">Otro</a><br>
-						<br> <a th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/mi-perfil/editar'"
-						    class="btn btn-outline-dark">Editar datos del perfil</a><br>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col">
-						<h3 class="my-3">Datos de la cuenta</h3>
-						<label>Mail:&nbsp;</label><label th:text="${mail}"></label><br>
-						
-						<div>
-							<a th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/mi-perfil/editar-datos-usuario'"
-								class="btn btn-outline-dark">Editar datos de usuario</a><br><br>
-						</div>
-						<div>
-							<a th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/mi-perfil/eliminar-cuenta'"
-							  class="btn btn-outline-dark" >Eliminar cuenta y perfil</a><br>
-						</div>	
 						<br>
+						<div class="card border-dark mb-3" style="max-width: 18rem;">
+							<div class="card-header">
+								<h5 class="card-title"
+									th:text="${provincia} + ', ' + ${localidad}"></h5>
+							</div>
+							<div class="card-body text-dark">
+								<label class="card-text" th:text="${direccion}">Lorem
+									Ipsum</label><br> <label class="card-text" th:text="${telefono}">a</label><br>
+								<label class="card-text" th:text="${mail_contacto}">a</label><br>
+								<a class="card-text" th:href="${red_social1}"
+									th:if="${red_social1 != null && red_social1 != ''}"
+									th:text="${red_social1}">Facebook</a><br> <br> <a
+									class="card-text" th:href="${red_social2}"
+									th:if="${red_social2 != null && red_social2 != ''}"
+									th:text="${red_social2}">Instagram</a><br> <br> <a
+									class="card-text" th:href="${red_social3}"
+									th:if="${red_social3 != null && red_social3 != ''}"
+									th:text="${red_social3}">Otro</a><br> <br>
+								<a
+									th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/mi-perfil/editar'"
+									class="btn btn-outline-dark form-control">Editar datos del perfil</a><br><br>
+								<a
+									th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/mi-perfil/editar-datos-usuario'"
+									class="btn btn-outline-dark form-control">Editar datos de usuario</a><br><br>
+								<a
+									th:href="'/' + ${nombre} + '/' + ${id_usuario} + '/mi-perfil/eliminar-cuenta'"
+									class="btn btn-outline-dark form-control">Eliminar usuario y perfil</a><br><br>
+							</div>
+
+						</div>
 					</div>
+
 				</div>
+
 			</div>
 
-
 		</div>
-
-
-
 	</div>
 	<!-- /.container -->
 
 	<!-- Footer -->
 	<footer class="py-5 bg-dark">
 		<div class="container">
-			<p class="m-0 text-center text-white">Copyright &copy; Your
-				Website 2018</p>
+			<p class="m-0 text-center text-white d-none">Copyright &copy;
+				Your Website 2018</p>
 		</div>
 		<!-- /.container -->
 	</footer>
@@ -182,7 +171,6 @@
 		src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"
 		integrity="sha384-smHYKdLADwkXOn1EmN1qk/HfnUcbVRZyYmZ4qpPea6sjB/pTJ0euyQp0Mk8ck+5T"
 		crossorigin="anonymous"></script>
-
 </body>
 
 </html>
