--- a/ArmaTuFecha/src/main/resources/templates/perfil-local.html
+++ b/ArmaTuFecha/src/main/resources/templates/perfil-local.html
@@ -122,45 +122,45 @@
 			<div class="col-md-4">
 				<div class="row">
 					<div class="col">
-						<h3 class="my-3">Datos de contacto</h3>
-						<label th:text="${provincia} + ', '">Lorem Ipsum</label>&nbsp;<label
-							th:text="${localidad}">Lorem Ipsum</label><br> <label
-							th:text="${direccion}">Lorem Ipsum</label><br> <label
-							th:text="${telefono}">a</label><br> <label
-							th:text="${mail_contacto}">a</label><br>
-
-
-					</div>
-				</div>
-				<div class="row">
-					<div class="col">
-						<h3 class="my-3">Redes sociales</h3>
-						<a th:href="${red_social1}"
+						<br>
+						<div class="card border-dark mb-3" style="max-width: 18rem;">
+						  <div class="card-header">
+						  	 <h5 class="card-title" th:text="${provincia} + ', ' + ${localidad}"></h5>
+						</div>
+						  <div class="card-body text-dark">
+						   	<label class="card-text" th:text="${direccion}">Lorem Ipsum</label><br> 
+						   	<label class="card-text" th:text="${telefono}">a</label><br> 
+						   	<label class="card-text" th:text="${mail_contacto}">a</label><br>
+						   	<a class="card-text" th:href="${red_social1}"
 							th:if="${red_social1 != null && red_social1 != ''}"
 							th:text="${red_social1}">Facebook</a><br>
-						<br> <a th:href="${red_social2}"
+						    <br> <a class="card-text" th:href="${red_social2}"
 							th:if="${red_social2 != null && red_social2 != ''}"
 							th:text="${red_social2}">Instagram</a><br>
-						<br> <a th:href="${red_social3}"
+						    <br> <a class="card-text" th:href="${red_social3}"
 							th:if="${red_social3 != null && red_social3 != ''}"
 							th:text="${red_social3}">Otro</a><br>
-						<br>
+						    <br>
+						   	
+						 	</div>	
+						</div>
 					</div>
+				
 				</div>
+
+
 			</div>
 
 
+
 		</div>
-
-
-
 	</div>
 	<!-- /.container -->
 
 	<!-- Footer -->
 	<footer class="py-5 bg-dark">
 		<div class="container">
-			<p class="m-0 text-center text-white">Copyright &copy; Your
+			<p class="m-0 text-center text-white d-none">Copyright &copy; Your
 				Website 2018</p>
 		</div>
 		<!-- /.container -->
