--- a/ArmaTuFecha/src/main/resources/templates/resultado-busqueda-musicos-localidad.html
+++ b/ArmaTuFecha/src/main/resources/templates/resultado-busqueda-musicos-localidad.html
@@ -91,7 +91,7 @@
 	<div class="pagination justify-content-center"
 		layout:fragment="~{paginacion}">
 
-		<button class="btn btn-outline-dark btn-lg">
+		<button class="btn btn-outline-dark btn-lg" th:if="${pagina != ( total_perfiles / 3 ) + 1}">
 			<a th:href="'/musicos/busqueda-localidad/procesar/'+ ${pagina+1} + '?busquedaLocalidad=' + ${busquedaLocalidad}">Más resultados </a>
 		</button>
 	</div>
